<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical"
   android:gravity="center_horizontal"
   >
   <ImageView
      android:layout_width="wrap_content"
      android:src="@mipmap/ic_launcher"
      android:contentDescription="@string/app_name"
      android:layout_height="wrap_content" />
   <TextView
       android:text="@string/aboutCopyright"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="10dp" />
   <TextView
       android:layout_width="wrap_content"
       android:textSize="12sp"
       android:layout_height="wrap_content"
       android:text="@string/aboutUrl"
       android:clickable="true"
       android:onClick="goToHomepage" />
   <TextView
       android:text="@string/aboutCopyright2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="10dp" />
   <TextView
       android:layout_width="wrap_content"
       android:textSize="12sp"
       android:layout_height="wrap_content"
       android:text="@string/aboutUrl2"
       android:clickable="true"
       android:onClick="goToHomepage" />
   <TextView
      android:text="@string/aboutLicense"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="10sp" />
   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:textSize="12sp"
      android:text="@string/aboutWarranty"
      android:layout_marginTop="20dp"/>
</LinearLayout>
